testsuite/tests/typing-rectypes-bugs/pr6174_bad.compilers.reference
File "pr6174_bad.ml", line 7, characters 78-79:
7 | let f : type a o. ((a -> o) -> o) t -> (a -> o) -> o = fun C k -> k (fun x -> x)
                                                                                  ^
Error: This expression has type "$0" but an expression was expected of type
         "$1" = "($2 -> $1) -> $1"
